"Some changes to Privacy page and added the full urls to it."

--- a/address_of_halal_meat_in_pokrov.html
+++ b/address_of_halal_meat_in_pokrov.html
@@ -305,7 +305,7 @@
       <p>
         copyright&copy :Мясо-Халяль
         <span id="date"> 2020 </span
-        ><a href="privacy_policy.html">.все права защищены</a>
+        ><a href="https://halal-market.netlify.app/privacy_policy.html">.все права защищены</a>
       </p>
     </footer>
     <!-- end of footer -->
