--- a/beef-tongue-meat.html
+++ b/beef-tongue-meat.html
@@ -244,7 +244,7 @@
                     аппетита!</p>
                 </li>
                 <li class="fade-up">
-                  <a href="rear-lamb-leg-meat.html" class="a_link_button_light1" title="Смотреть другие рецепты"><button
+                  <a href="https://halal-market.netlify.app/rear-lamb-leg-meat.html" class="a_link_button_light1" title="Смотреть другие рецепты"><button
                       class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
                 </li>
@@ -325,7 +325,7 @@
       </div>
       <p>
         copyright&copy :Мясо-Халяль
-        <span id="date"> 2020 </span><a href="privacy_policy.html">.все права защищены</a>
+        <span id="date"> 2020 </span><a href="https://halal-market.netlify.app/privacy_policy.html">.все права защищены</a>
       </p>
     </footer>
     <!-- end of footer -->
