--- a/beef-heart-meat-halal.html
+++ b/beef-heart-meat-halal.html
@@ -229,7 +229,7 @@
                   </p>
                 </li>
                 <li class="fade-up">
-                  <a href="ground-beef-meat-halal-in-pokrov.html" class="a_link_button_light1"
+                  <a href="https://halal-market.netlify.app/ground-beef-meat-halal-in-pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
                 </li>
@@ -307,7 +307,7 @@
       </div>
       <p>
         copyright&copy :Мясо-Халяль
-        <span id="date"> 2020 </span><a href="privacy_policy.html">.все права защищены</a>
+        <span id="date"> 2020 </span><a href="https://halal-market.netlify.app/privacy_policy.html">.все права защищены</a>
       </p>
     </footer>
     <!-- end of footer -->
