--- a/beef_pulp_meat_in_pokrov.html
+++ b/beef_pulp_meat_in_pokrov.html
@@ -254,7 +254,7 @@
                     Приятного аппетита!</p>
                 </li>
                 <li class="fade-up">
-                  <a href="pulp_lamb_meat_halal_to_buy_in_pokrov.html" class="a_link_button_light1"
+                  <a href="https://halal-market.netlify.app/pulp_lamb_meat_halal_to_buy_in_pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
                 </li>
@@ -333,7 +333,7 @@
       </div>
       <p>
         copyright&copy :Мясо-Халяль
-        <span id="date"> 2020 </span><a href="privacy_policy.html">.все права защищены</a>
+        <span id="date"> 2020 </span><a href="https://halal-market.netlify.app/privacy_policy.html">.все права защищены</a>
       </p>
     </footer>
     <!-- end of footer -->
