--- a/beef_ribs_halal_meat_in_pokrov.html
+++ b/beef_ribs_halal_meat_in_pokrov.html
@@ -230,7 +230,7 @@
                   </p>
                 </li>
                 <li class="fade-up">
-                  <a href="veal_shoulder_meat_halal_in_pokrov.html" class="a_link_button_light1"
+                  <a href="https://halal-market.netlify.app/veal_shoulder_meat_halal_in_pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
                 </li>
@@ -309,7 +309,7 @@
       </div>
       <p>
         copyright&copy :Мясо-Халяль
-        <span id="date"> 2020 </span><a href="privacy_policy.html">.все права защищены</a>
+        <span id="date"> 2020 </span><a href="https://halal-market.netlify.app/privacy_policy.html">.все права защищены</a>
       </p>
     </footer>
     <!-- end of footer -->
