--- a/brisket_beef_halal_meat_in_pokrov.html
+++ b/brisket_beef_halal_meat_in_pokrov.html
@@ -241,7 +241,7 @@
                   </p>
                 </li>
                 <li>
-                  <a href="minced_meat_lamb_with_beef_meat_halal_in_pokrov.html" class="a_link_button_light1"
+                  <a href="https://halal-market.netlify.app/minced_meat_lamb_with_beef_meat_halal_in_pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
                 </li>
@@ -318,7 +318,7 @@
       </div>
       <p>
         copyright&copy :Мясо-Халяль
-        <span id="date"> 2020 </span><a href="privacy_policy.html">.все права защищены</a>
+        <span id="date"> 2020 </span><a href="https://halal-market.netlify.app/privacy_policy.html">.все права защищены</a>
       </p>
     </footer>
     <!-- end of footer -->
