--- a/chicken-meat-halal-in-pokrov.html
+++ b/chicken-meat-halal-in-pokrov.html
@@ -242,7 +242,7 @@
                   </p>
                 </li>
                 <li class="fade-up">
-                  <a href="beef-tongue-meat.html" class="a_link_button_light1" title="Смотреть другие рецепты"><button
+                  <a href="https://halal-market.netlify.app/beef-tongue-meat.html" class="a_link_button_light1" title="Смотреть другие рецепты"><button
                       class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
                 </li>
@@ -318,7 +318,7 @@
       </div>
       <p>
         copyright&copy :Мясо-Халяль
-        <span id="date"> 2020 </span><a href="privacy_policy.html">.все права защищены</a>
+        <span id="date"> 2020 </span><a href="https://halal-market.netlify.app/privacy_policy.html">.все права защищены</a>
       </p>
     </footer>
     <!-- end of footer -->
