--- a/lamb_loin_meat_in_pokrov.html
+++ b/lamb_loin_meat_in_pokrov.html
@@ -228,7 +228,7 @@
                     Приятного аппетита!</p>
                 </li>
                 <li class="fade-up">
-                  <a href="lamb_back_meat.html" class="a_link_button_light1" title="Смотреть другие рецепты"><button
+                  <a href="https://halal-market.netlify.app/lamb_back_meat.html" class="a_link_button_light1" title="Смотреть другие рецепты"><button
                       class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
                 </li>
@@ -305,7 +305,7 @@
       </div>
       <p>
         copyright&copy :Мясо-Халяль
-        <span id="date"> 2020 </span><a href="privacy_policy.html">.все права защищены</a>
+        <span id="date"> 2020 </span><a href="https://halal-market.netlify.app/privacy_policy.html">.все права защищены</a>
       </p>
     </footer>
     <!-- end of footer -->
