"Added the full urls to the rest of the pages."

--- a/pulp_lamb_meat_halal_to_buy_in_pokrov.html
+++ b/pulp_lamb_meat_halal_to_buy_in_pokrov.html
@@ -253,7 +253,7 @@
                     Толсто нарежьте баранину и подавайте с хрустящим картофелем.Приятного аппетита!</p>
                 </li>
                 <li class="fade-up">
-                  <a href="beef_tenderloin_meat_in_pokrov.html" class="a_link_button_light1"
+                  <a href="https://halal-market.netlify.app/beef_tenderloin_meat_in_pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
                 </li>
@@ -335,7 +335,7 @@
       </div>
       <p>
         copyright&copy :Мясо-Халяль
-        <span id="date"> 2020 </span><a href="privacy_policy.html">.все права защищены</a>
+        <span id="date"> 2020 </span><a href="https://halal-market.netlify.app/privacy_policy.html">.все права защищены</a>
       </p>
     </footer>
     <!-- end of footer -->
