--- a/veal-pulp-meat-to-buy-in-pokrov.html
+++ b/veal-pulp-meat-to-buy-in-pokrov.html
@@ -241,7 +241,7 @@
                     Приятного аппетита!</p>
                 </li>
                 <li class="fade-up">
-                  <a href="beef-liver-meat-in-pokrov.html" class="a_link_button_light1"
+                  <a href="https://halal-market.netlify.app/beef-liver-meat-in-pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
                 </li>
@@ -317,7 +317,7 @@
       </div>
       <p>
         copyright&copy :Мясо-Халяль
-        <span id="date"> 2020 </span><a href="privacy_policy.html">.все права защищены</a>
+        <span id="date"> 2020 </span><a href="https://halal-market.netlify.app/privacy_policy.html">.все права защищены</a>
       </p>
     </footer>
     <!-- end of footer -->
