--- a/pulp-on-the-bone-meat-in-pokrov.html
+++ b/pulp-on-the-bone-meat-in-pokrov.html
@@ -252,7 +252,7 @@
                     минимум на 20 минут, чтобы остыли. Посыпьте кориандром. Приятного аппетита!</p>
                 </li>
                 <li class="fade-up">
-                  <a href="beef_tenderloin_meat_in_pokrov.html" class="a_link_button_light1"
+                  <a href="https://halal-market.netlify.app/beef_tenderloin_meat_in_pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
                 </li>
@@ -332,7 +332,7 @@
       </div>
       <p>
         copyright&copy :Мясо-Халяль
-        <span id="date"> 2020 </span><a href="privacy_policy.html">.все права защищены</a>
+        <span id="date"> 2020 </span><a href="https://halal-market.netlify.app/privacy_policy.html">.все права защищены</a>
       </p>
     </footer>
     <!-- end of footer -->
