--- a/rabbit-fresh-meat-halal.html
+++ b/rabbit-fresh-meat-halal.html
@@ -248,7 +248,7 @@
                     аппетита!</p>
                 </li>
                 <li class="fade-up">
-                  <a href="chicken-meat-halal-in-pokrov.html" class="a_link_button_light1"
+                  <a href="https://halal-market.netlify.app/chicken-meat-halal-in-pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
                 </li>
@@ -329,7 +329,7 @@
       </div>
       <p>
         copyright&copy :Мясо-Халяль
-        <span id="date"> 2020 </span><a href="privacy_policy.html">.все права защищены</a>
+        <span id="date"> 2020 </span><a href="https://halal-market.netlify.app/privacy_policy.html">.все права защищены</a>
       </p>
     </footer>
     <!-- end of footer -->
