--- a/steak-on-the-bone-halal-meat.html
+++ b/steak-on-the-bone-halal-meat.html
@@ -241,7 +241,7 @@
                   </p>
                 </li>
                 <li class="fade-up">
-                  <a href="pulp-on-the-bone-meat-in-pokrov.html" class="a_link_button_light1"
+                  <a href="https://halal-market.netlify.app/pulp-on-the-bone-meat-in-pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
                 </li>
@@ -321,7 +321,7 @@
       </div>
       <p>
         copyright&copy :Мясо-Халяль
-        <span id="date"> 2020 </span><a href="privacy_policy.html">.все права защищены</a>
+        <span id="date"> 2020 </span><a href="https://halal-market.netlify.app/privacy_policy.html">.все права защищены</a>
       </p>
     </footer>
     <!-- end of footer -->
