--- a/terms_of_use.html
+++ b/terms_of_use.html
@@ -463,7 +463,7 @@
       </div>
       <p>
         copyright&copy :Мясо-Халяль
-        <span id="date"> 2020 </span><a href="privacy_policy.html">.все права защищены</a>
+        <span id="date"> 2020 </span><a href="https://halal-market.netlify.app/privacy_policy.html">.все права защищены</a>
       </p>
     </footer>
     <!-- end of footer -->
