--- a/veal-steak-meat-halal.html
+++ b/veal-steak-meat-halal.html
@@ -237,7 +237,7 @@
                     петрушкой. Приятного аппетита!</p>
                 </li>
                 <li class="fade-up">
-                  <a href="front-leg-of-lamb-halal-meat-in-pokrov.html" class="a_link_button_light1"
+                  <a href="https://halal-market.netlify.app/front-leg-of-lamb-halal-meat-in-pokrov.html" class="a_link_button_light1"
                     title="Смотреть другие рецепты"><button class="glow-on-hover" type="button"> Другие
                       рецепты</button></a>
                 </li>
@@ -313,7 +313,7 @@
       </div>
       <p>
         copyright&copy :Мясо-Халяль
-        <span id="date"> 2020 </span><a href="privacy_policy.html">.все права защищены</a>
+        <span id="date"> 2020 </span><a href="https://halal-market.netlify.app/privacy_policy.html">.все права защищены</a>
       </p>
     </footer>
     <!-- end of footer -->
