"Changed the info about the delivery."

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
           <div class="title">
             <p>
               <span class="delivery_car"><i class="fas fa-car"></i></span
-              >Доставка по г. Покров, пос. Вольгинский, г. Петушки бесплатно.
+              >🚘Есть доставка по г. Покров и пос. Вольгинский!.
             </p>
           </div>
           <div class="about-center section-center">
