"Changed the info about chicken."

--- a/chicken-meat-halal-in-pokrov.html
+++ b/chicken-meat-halal-in-pokrov.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="content-type" content="text/html" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Курица домашняя</title>
+    <title>Курица фермерская</title>
     <meta name="author" content="Halal Market">
-    <meta name="description" content="►Курица домашняя в Покрове ►Баранина ►Говядина ►Телятина ►Гарантия качества" />
+    <meta name="description" content="►Курица фермерская в Покрове ►Баранина ►Говядина ►Телятина ►Гарантия качества" />
     <meta name="language" content="russian">
     <meta name="robots" content="index,follow">
     <meta name="rating" content="safe for kids">
     <meta name="HandheldFriendly" content="true">
     <!-- ogp -->
-    <meta property="og:title" content="Курица домашняя" />
+    <meta property="og:title" content="Курица фермерская" />
     <meta property="og:description"
-      content="►Курица домашняя в Покрове ►Баранина ►Говядина ►Телятина ►Гарантия качества" />
+      content="►Курица фермерская в Покрове ►Баранина ►Говядина ►Телятина ►Гарантия качества" />
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="►Мясо-Халяль" />
@@ -112,7 +112,7 @@
       <!-- banner -->
       <div class="banner">
         <div class="container fade-up">
-        <h1 class="h1 fade-up">Курица домашняя</h1>
+        <h1 class="h1 fade-up">Курица фермерская</h1>
           <p class="text_dark">
             Курица травяного откорма, на 100% выращенная на местных фермах, высоко ценится за приятный, мягкий вкус.
             Наша курица
@@ -139,17 +139,17 @@
             <div class="colHolder one fade-up">
               <div class="imgHolder">
                 <img src="images/img_meat_pages/chicken-homemade-meat.jfif" alt="chicken-homemade-meat" class="largeImg"
-                  id="largeImg" title="Курица домашняя">
+                  id="largeImg" title="Курица фермерская">
               </div>
               <ul id="thumbs">
-                <li><a href="images/chiken_from_farm_meat.jpg" title="Курица домашняя"><img
+                <li><a href="images/chiken_from_farm_meat.jpg" title="Курица фермерская"><img
                       src="images/chiken_from_farm_meat.jpg" alt="chicken-homemade-meat" class="imgMain  thumb"></a>
                 </li>
-                <li><a href="images/img_meat_pages/chicken-homemade-meat.jfif" title="Курица домашняя"><img
+                <li><a href="images/img_meat_pages/chicken-homemade-meat.jfif" title="Курица фермерская"><img
                       src="images/img_meat_pages/chicken-homemade-meat.jfif" alt="chicken-homemade-meat"
                       class="imgMain thumb"></a>
                 </li>
-                <li><a href="images/img_meat_pages/chicken-homemade-halal-meat.jpeg" title="Курица домашняя"><img
+                <li><a href="images/img_meat_pages/chicken-homemade-halal-meat.jpeg" title="Курица фермерская"><img
                       src="images/img_meat_pages/chicken-homemade-halal-meat.jpeg" alt="chicken-homemade-meat"
                       class="imgMain thumb"></a>
                 </li>
@@ -157,7 +157,7 @@
             </div>
             <div class="colHolder">
               <div class=" h3_title fade-up">
-                <h3 class="h3Glow">Курица домашняя</h3>
+                <h3 class="h3Glow">Курица фермерская</h3>
               </div>
               <ul class="ul_with_text fade-up">
                 <li>
