--- a/address_of_halal_meat_in_pokrov.html
+++ b/address_of_halal_meat_in_pokrov.html
@@ -163,13 +163,13 @@
       <!-- banner -->
       <section class="iframe_map">
         <div class="title_container fade-up">
-          <h1 class="title">Мясо-Халяль <span>в Покрове</span></h1>
+          <h1 class="title">Мясо-Халяль <span>на Вольгинском</span></h1>
         </div>
         <div class="col_right">
           <div class="img_container">
             <figure class="fade-up">
               <img
-                src="images/banner-halal_market.jpg"
+                src="images/bg_meat_up_and_down.jpg"
                 alt="banner halal market in Pokrov"
                 class="imgMain"
               />
@@ -206,30 +206,18 @@
     </div>
     <!-- preloader -->
     <!-- main -->
-    <main class="main_bg_map">
+     <main class="main_bg_map">
       <div class="col_left" id="feedback">
         <div class="iframe_container fade-up" id="on_map">
           <iframe
-            src=" https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=125451449225"
+            src="https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=107610492950"
             width="100%"
             height="500px"
             frameborder="0"
-            allow="camera 'none'; microphone 'none';"
+            allow="camera 'none'; microphone 'none'"
           ></iframe>
         </div>
-        <div class="btn_container fade-up">
-          <h3>
-            <a
-              href="https://yandex.ru/maps/org/myaso_khalyal/125451449225/reviews/?from=mapframe&ll=39.182285%2C55.919297&z=16"
-              target="_blank"
-              class="a_link_button_light1"
-              title="Оставить отзыв на Яндекс Картах"
-              ><button class="glow-on-hover" type="button">
-                Оставить отзыв о компании
-              </button>
-            </a>
-          </h3>
-        </div>
+        <div class="btn_container fade-up"></div>
       </div>
       <hr class="hr_thumb_on_map" />
     </main>
